Bug 504423 - plasmaworkspace/freespacenotifier: Alerts about cache partititions which are full "by design"
Summary: plasmaworkspace/freespacenotifier: Alerts about cache partititions which are ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.3.90
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-05-17 16:17 UTC by Oliver Freyermuth
Modified: 2025-05-29 13:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Freyermuth 2025-05-17 16:17:49 UTC
SUMMARY
As of:
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5337
the freespacenotifier will alert users about any mounted partitions. This is notably anger-inducing for cache partitions. For example, we have dedicated partitions (/var/cache/fscache and /var/cache/cvmfs) which are used for the kernel's fscache functionality for network filesystems (managed by cachefilesd in userspace) and for CVMFSs cache (CernVM-FS). 
These partitions are "full by design", and a non-admin user can not even clean them up. As their fill level varies with culling, I expect periodic nagging warnings for all users. 

STEPS TO REPRODUCE
1. Use a system with a dedicated cache partition and let it fill up. 

OBSERVED RESULT
See warnings come and go as caches are filled and culled. 

EXPECTED RESULT
No warnings for cache partitions. 

ADDITIONAL INFORMATION
It would be great if such cache partitions which are irrelevant for users could be silenced. One idea could be to ignore partitions with a CACHEDIR.TAG marker in the top level ( https://bford.info/cachedir/ ), or allow the administrator / distribution to exclude a list of partitions via a configuration knob.
Comment 1 Bug Janitor Service 2025-05-19 21:17:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5497
Comment 2 Niccolò Venerandi 2025-05-29 07:24:59 UTC
Git commit f4a08099d0aae466f06f0094498cc593c8ce4532 by Niccolò Venerandi.
Committed on 29/05/2025 at 07:24.
Pushed by niccolove into branch 'master'.

Do not track cache partitions with freespacenotifier

M  +6    -1    freespacenotifier/module.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f4a08099d0aae466f06f0094498cc593c8ce4532
Comment 3 Niccolò Venerandi 2025-05-29 07:25:13 UTC
Git commit 01978f583ae1d2878830ccd8b58c4b3e0c39f257 by Niccolò Venerandi.
Committed on 29/05/2025 at 07:25.
Pushed by niccolove into branch 'Plasma/6.4'.

Do not track cache partitions with freespacenotifier


(cherry picked from commit f4a08099d0aae466f06f0094498cc593c8ce4532)

e033ef89 Do not track cache partitions with freespacenotifier
5203019a Apply 1 suggestion(s) to 1 file(s)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +6    -1    freespacenotifier/module.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/01978f583ae1d2878830ccd8b58c4b3e0c39f257