Do not track cache partitions with freespacenotifier

BUG:504423